--- a/css/colors.css
+++ b/css/colors.css
@@ -11,6 +11,9 @@
 	background-color: #ECF0F1;
 }
 
+#bg{
+	background-color: #000000;
+}
 
 
 
@@ -33,6 +36,10 @@
 	font-size: 20px;
 	font-family: 'Special Elite', cursive;
 	}
+	#slo{
+	font-family: 'Droid Serif', serif;
+	font-size: 14px;
+	}
 }
 @media screen and (min-width:400px) and (max-width: 600px){
 	#numbers{
@@ -52,6 +59,10 @@
 	#majors{
 	font-size: 30px;
 	font-family: 'Special Elite', cursive;
+	}
+	#slo{
+	font-family: 'Droid Serif', serif;
+	font-size: 18px;
 	}
 }
 @media screen and (min-width:601px) and (max-width: 1035px){
@@ -73,6 +84,10 @@
 	font-size: 40px;
 	font-family: 'Special Elite', cursive;
 	}
+	#slo{
+	font-family: 'Droid Serif', serif;
+	font-size: 23px;
+	}
 }
 @media screen and (min-width: 1016px) and (max-width: 1920px){
 	#numbers{
@@ -92,6 +107,10 @@
 	#majors{
 	font-size: 70px;
 	font-family: 'Special Elite', cursive;
+	}
+	#slo{
+	font-family: 'Droid Serif', serif;
+	font-size: 25px;
 	}
 }
 
@@ -119,7 +138,6 @@
 	color: #85DB18; 
 	font-family: 'Special Elite', cursive;
 }
-#slo{
-	font-family: 'Droid Serif', serif;
-	font-size: 22px;
-}
+
+
+
