--- a/css/colors.css
+++ b/css/colors.css
@@ -20,123 +20,123 @@
 @media screen and (min-width: 200px) and (max-width: 400px) {
 	#numbers{
 		font-size: 12px;
-		font-family: 'Special Elite', cursive;
+		font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#titleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #E74C3C;
 	font-size: 20px;
 	}
 	#subtitleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #3399FF;
 	font-size: 15px;
 	}
 	#majors{
 	font-size: 20px;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#slo{
-	font-family: 'Droid Serif', serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 14px;
 	}
 }
 @media screen and (min-width:400px) and (max-width: 600px){
 	#numbers{
 		font-size: 20px;
-		font-family: 'Special Elite', cursive;
+		font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#titleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #E74C3C;
 	font-size: 35px;
 	}
 	#subtitleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #3399FF;
 	font-size: 20px;
 	}
 	#majors{
 	font-size: 30px;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#slo{
-	font-family: 'Droid Serif', serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 18px;
 	}
 }
 @media screen and (min-width:601px) and (max-width: 1035px){
 	#numbers{
 		font-size: 35px;
-		font-family: 'Special Elite', cursive;
+		font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#titleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #E74C3C;
 	font-size: 60px;
 	}
 	#subtitleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #3399FF;
 	font-size: 30px;
 	}
 	#majors{
 	font-size: 40px;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#slo{
-	font-family: 'Droid Serif', serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 23px;
 	}
 }
 @media screen and (min-width: 1016px) and (max-width: 1920px){
 	#numbers{
 	font-size: 110px;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#titleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #E74C3C;
 	font-size: 60px;
 	}
 	#subtitleSemester{
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	color: #3399FF;
 	font-size: 40px;
 	}
 	#majors{
 	font-size: 70px;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 	}
 	#slo{
-	font-family: 'Droid Serif', serif;
+	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 25px;
 	}
 }
 
 #c1{
 	color: #FFE11A;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 #c2{
 	color: #004358;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 #c3{
 	color: #D90000;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 #c4{
 	color: #01B0F0;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 #c5{
 	color: #FF8C00;
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 #c6{
 	color: #85DB18; 
-	font-family: 'Special Elite', cursive;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 
 
